@@ -4,8 +4,10 @@ Hadoop ETL: bumped to 0.2.0
 Hadoop ETL: break referer_url into constituent parts (and remove raw referer_url) (part of #175)
 Hadoop ETL: remove raw referrer_url (as no space in Redshift table defn) (part of #175)
 Hadoop ETL: added referer parsing (#176)                                                            - TODO
-Redshift: table-def script bumped to 0.1.0                                                          - TODO
+Redshift: table-def script bumped to 0.1.0
 Redshift: migration script added for 0.0.1 to 0.1.0                                                 - TODO
+Redshift: XXX
+Redshift: fix bug where mkt_source and mkt_medium are in each other's fields                        - TODO add ticket
 Common: completed rename of 3-etl to 3-enrich (#99)                                                 - TODO
 Common: replaced embedded architecture images with CloudFront-hosted images                         - TODO
 
